--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="gioithieu.html">
-            <h1><span>N</span>hóm <span>B</span>ốn</h1>
+            <h1><span>N</span>hóm <span>H</span>ai</h1>
           </a>
         </div>
         <div class="nav-list">
