--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1>Địa Đạo Vịnh Mốc <span></span></h1>
         <h1>Hệ thống làng hầm Vĩnh Linh <span></span></h1>
         <h1>Quảng Trị <span></span></h1>
-        <a href="gioithieu.html" type="button" class="cta">Nhóm Bốn</a>
+        <a href="gioithieu.html" type="button" class="cta">Nhóm Hai</a>
       </div>
     </div>
   </section>
