--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   <section id="footer">
     <div class="footer container">
       <div class="brand">
-        <h1><span>N</span>hóm <span>B</span>ốn</h1>
+        <h1><span>N</span>hóm <span>H</span>ai</h1>
       </div>
       <h2>Đem lại trải nghiệm tuyệt vời nhất</h2>
     </div>
