--- a/gioithieu.html
+++ b/gioithieu.html
@@ -42,7 +42,7 @@
       <div class="projects container">
         <div class="projects-header">
           <h1 class="section-titl" > <a href="index.html"> <span class="black">Trang</span> <span class="red">Chủ</span> </a> </h1>
-          <h2 class="section-title">Nhóm Bốn</h2>
+          <h2 class="section-title">Nhóm Hai</h2>
         </div>
         <div class="all-projects">
           <div class="project-item">
