--- a/gioithieu.html
+++ b/gioithieu.html
@@ -75,9 +75,10 @@
             <div class="project-info">
               <h1>Nguyễn Đăng Vũ</h1>
               <h2>Đậu Nguyện </h2>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-                rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-                harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+              <p>Sở thích : Chơi Free fire
+              <p>Nghe nhạc</p> 
+              <p>Đi date lúc rảnh</p>
+              <p>Học bài lúc mọi người ngủ</p>
             </div>
             <div class="project-img">
               <img src="./img/50484aef6c21bff93b7491d53aebaf47.jpg" alt="img">
