--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styleindex.css">
   <title>Nhóm Hùng - Vũ - Phương</title>
+  <link rel="icon" href="https://img.icons8.com/?size=100&id=qnZWfcfXaNaR&format=png&color=000000" type="image/icon type">
   <style>
     
   </style>
